[package]
name = "pac-human"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0-dev"
rand = "0.8.5"

[[bin]]
name = "pacman"
path = "src/pacman.rs"

[[bin]]
name = "snake"
path = "src/snake.rs"
